--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.8",
     "axios": "^0.21.4",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-config": "^1.4.4",
@@ -29,6 +30,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.173",
     "@types/react-native": "^0.64.5",
     "@types/react-native-vector-icons": "^6.4.8",
     "@types/react-redux": "^7.1.18",
