--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.8",
     "axios": "^0.21.4",
+    "deepmerge": "^4.2.2",
     "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-native": "0.65.1",
