--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
     "ios": "ENVFILE=.env react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.8",
+    "@react-native-community/blur": "^3.6.0",
+    "@react-native-community/netinfo": "^6.0.2",
     "axios": "^0.21.4",
     "deepmerge": "^4.2.2",
     "lodash": "^4.17.21",
+    "patch-package": "^6.4.7",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-config": "^1.4.4",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-vector-icons": "^8.1.0",
